--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     </div>
 
-    <div class="mainContainer">
+    <div class="mainContainer" id="mainDarkMode">
         <nav id='darkmode'class="navbar navbar-expand-lg navbar-light bg-primary navbarContainer">
             <div class=" container mx-6">
                 <div class="brandImage">
