--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </nav>
         <!-- 1st block Offers -->
-        <div class="container-fluid navbarsubcontainer card">
+        <div class="container-fluid navbarsubcontainer card" id="mainDarkMode1">
             <div class="row rowborder">
                 <div class="col-1 colimage">
                     <img src="./images/Navbar/1image_navbar.png" class="imagemidNavbar" alt="">
@@ -150,7 +150,7 @@
         </div>
     
         <!-- 1st Deal -->
-        <div class="card marginContainer">
+        <div class="card marginContainer" id="mainDarkMode2">
             <div class="card-body border-bottom d-flex">
                 <div class="me-2">
                     <h5>Deals of the Day</h5>
@@ -273,7 +273,7 @@
         </div>
         
         <!-- 2nd Deal -->
-        <div class="card marginContainer">
+        <div class="card marginContainer" id="mainDarkMode3">
             <div class="card-body border-bottom d-flex">
                 <div class="me-2">
                     <h5>Deals of the Day</h5>
