json data added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="mainContainer" id="mainDarkMode0">
         <nav id='darkmode' class="navbar navbar-expand-lg navbar-light bg-primary navbarContainer">
                
-                <div class="brandImage">
+                <div class="brandImage weathernew">
                 <img class="weatherimg" id="weatherIcon">
                 <!-- <span id="out"></span> -->
                 
